@@ -78,3 +78,6 @@
  - spp: the timestamp of the initial coordinates file are now aligned to the timestamp of observations
  - lsq: fixed some possible fatal issues caused by rounding errors
  - tedit: arguments with decimal comma now no longer causes the run to hang indefinitely
+
+16. 2022-11-08 (v2.2)
+ - pdp3.sh: increase the number of decimal places in the time range from two to three
